--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
+  background-image: url(./images/bridge-left.jpg);
+  background-repeat:'no-repeat';
+  width:'250px';
+  height:'250px';
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-family: "Open Sans", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2  {
+  font-family: "Raleway", sans-serif;
+  color: #467561;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-link {
+  color:  #c5d86d !important;
+  font-size: 1.2rem !important;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+hr {
+  color: #467561;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 100%;
 }
