--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App {
-  background-image: url(./images/bridge-left.jpg);
-  background-repeat:'no-repeat';
-  width:'250px';
-  height:'250px';
+  background-image: url(bridge-left.jpg);
+  background-repeat:'repeat';
+  width:'100%';
+  height:'100%';
   text-align: center;
 }
 
 p {
   font-family: "Open Sans", sans-serif;
+  margin: 1rem 3rem;
+  color: #c5d86d;
 }
 
 h1, h2  {
@@ -15,15 +17,56 @@ h1, h2  {
   color: #467561;
 }
 
+h3 {
+  font-family: "Raleway", sans-serif;
+  color: #c5d86d;
+  margin-top: 4rem;
+}
+
+h4 {
+  font-family: "Raleway", sans-serif;
+  color: #c5d86d;
+}
+
+
 .nav-link {
   color:  #c5d86d !important;
   font-size: 1.2rem !important;
 }
+.site-footer {
+  color: green;
+  background-image: linear-gradient(to bottom, lightblue, #c5d86d, green);
+  padding: 20px 0;
+}
+
+.section {
+  background-color: green;
+}
 
 hr {
-  color: #467561;
   border-style: none;
   border-top-style: dotted;
   border-width: 5px;
   width: 100%;
+  margin-top: 0;
+}
+
+.pageline {
+  border-style: none;
+  border-top-style: dotted;
+  border-color: green;
+  border-width: 5px;
+  width: 100%;
+  margin-top: 0;
+}
+
+.navbar-dark {
+  background-color: green;
+  padding: 0;
+}
+
+img {
+  border-radius: 15px;
+  border-color: green;
+  border-style: solid;
 }
