--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,38 @@
+
+
 .App {
-  background-image: url(bridge-left.jpg);
-  background-repeat:'repeat';
-  width:'100%';
-  height:'100%';
-  text-align: center;
+  width:'100vw';
+  min-width: 500px;
+  background-image: url(bridgeleft2.jpg);
+  background-position: center center;
+  background-repeat:'no-repeat';
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: aquamarine;
+}
+@media only screen and (max-device-width: 1366px) {
+  .bg {
+    background-attachment: scroll;
+  }
 }
 
 p {
   font-family: "Open Sans", sans-serif;
   margin: 1rem 3rem;
-  color: white;
+  text-align: center;
 }
 
-h1, h2  {
+h1, h2, h4  {
   font-family: "Raleway", sans-serif;
   color: #467561;
+  text-align: center;
 }
 
 h3 {
   font-family: "Raleway", sans-serif;
-  color: #c5d86d;
+  color: #467561;
   margin-top: 4rem;
 }
-
-h4 {
-  font-family: "Raleway", sans-serif;
-  color: #c5d86d;
-}
-
 
 .nav-link {
   color:  #c5d86d !important;
@@ -35,12 +40,22 @@ h4 {
 }
 .site-footer {
   color: green;
-  background-image: linear-gradient(to bottom, lightblue, #c5d86d, green);
+  background-image: linear-gradient(to bottom, rgb(173, 216, 230, .7), rgb(197, 216, 109, .7), rgb(0, 128, 0, .7));
   padding: 20px 0;
 }
 
+.row-content {
+  padding: 20px
+}
+
+.about {
+  text-align: center;
+  color: white;
+  background-color: rgba(66, 144, 175, 0.3);
+}
+
 .section {
-  background-color: green;
+  background-color: rgb(255, 255, 255, .8);
 }
 
 hr {
@@ -65,8 +80,96 @@ hr {
   padding: 0;
 }
 
+
+
 img {
+  height:100%;
+  width:50vw;
   border-radius: 15px;
   border-color: green;
   border-style: solid;
+}
+
+.circle{
+  border-style: double;
+  border-radius: 100%;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: orange;
+  
+}
+.circlehover{
+  border-style: double;
+  border-radius: 100%;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: red;
+}
+
+.circleText{
+  color: white;
+  font-size: .8rem;
+  }
+
+  /*Accordion*/
+  .accordion {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+}
+
+.accordion__item + .accordion__item {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.accordion__button {
+    background-color: #f4f4f4;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+}
+
+.accordion__button:hover {
+    background-color: #ddd;
+}
+
+.accordion__button:before {
+    display: inline-block;
+    content: '';
+    height: 10px;
+    width: 10px;
+    margin-right: 12px;
+    border-bottom: 2px solid currentColor;
+    border-right: 2px solid currentColor;
+    transform: rotate(-45deg);
+}
+
+.accordion__button[aria-expanded='true']::before,
+.accordion__button[aria-selected='true']::before {
+    transform: rotate(45deg);
+}
+
+[hidden] {
+    display: none;
+}
+
+.accordion__panel {
+    padding: 20px;
+    animation: fadein 0.35s ease-in;
+}
+
+/* -------------------------------------------------- */
+/* ---------------- Animation part ------------------ */
+/* -------------------------------------------------- */
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
